# stanlib

./: .gitignore  CMakeLists.txt  core.h  fly_cam.h  gpu.h  gpu2.h  gpu3.h  gpu3_impl_vk.h  gpu3_sdl.h  gpu_vk.h  gpu_vk_impl.h
blitter/: blitter.c  blitter.h
blitter/shaders/: blit.slang  blit_fs.c  blit_fs.h  blit_vs.c  blit_vs.h
gpu/: gpu.h  gpu_impl.c  gpu_impl_common.c  gpu_impl_metal.m  gpu_impl_vk.c  gpu_sdl.h
include/stanlib/: atlas_pack.h  blitter.h  core.h  gpu.h  image.h  input.h  input_sdl.h  mesh.h  ray_intersection.h  stanlib.h  text.h  ui.h  ui_sdl.h
old/: gpu2.h
scripts/: compile_builtin_shaders.py
scripts/stanlib/: __init__.py  compile_shader.py
src/: atlas_pack.c  image.c  input.c  ray_intersection.c  text.c  ui.c
src/blitter/: blitter.c  shaders.c  shaders.h
src/blitter/shaders/: blit.slang  blit_fs.c  blit_fs.h  blit_vs.c  blit_vs.h
src/gpu/: gpu_impl.c  gpu_impl_common.c  gpu_impl_metal.m  gpu_impl_vk.c
text/: text.h  text_impl.c
ui/: ui.c  ui.h  ui_sdl.h
xcode/stanlib.xcodeproj/: project.pbxproj
xcode/stanlib.xcodeproj/xcshareddata/xcschemes/: stanlib.xcscheme
